# i3-lsp

./: Cargo.toml  README.md
src/: diagnostics.rs  lib.rs  lsp.rs  main.rs  parser.rs
src/analysis/: diagnostics.rs  mod.rs
