[package]
name = "i3-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.8.6"
pest_derive = "2.8.6"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
